[tool.poetry]
name = "poet"
version = "0.1.0"
description = "An assistant for Python projects utilizing Pyenv, Virtualenv, and Poetry."
authors = ["Skyler Burger <skylerburger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
